Prototype for home page ready! Fixing spacing and carousel in next update...

--- a/css/main.css
+++ b/css/main.css
@@ -2583,3 +2583,36 @@ span.stButton_gradient,
     border-radius: 100%;
     margin: 10px 0;
 }
+
+/*******************************************
+         Custom CSS
+*******************************************/
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css);
+
+
+/*/ start count stats /*/
+
+section#counter-stats {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.stats {
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.stats .fa {
+    color: #008080;
+    font-size: 60px;
+}
+
+/*/ end count stats /*/
